// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignIn matches snapshot 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "flex": 1,
        "justifyContent": "center",
        "marginBottom": 0,
        "padding": 16,
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "gap": 24,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "color": "white",
          "fontFamily": "FranklinGothicDemiCond-Italic",
          "fontSize": 24,
          "textAlign": "center",
          "textTransform": "uppercase",
          "width": "100%",
        }
      }
    >
      Login to your
      

      in-game account
    </Text>
    <View
      style={
        {
          "gap": 12,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "gap": 4,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "boxShadow": [
                {
                  "blurRadius": 3,
                  "color": "#161616",
                  "offsetX": 0,
                  "offsetY": 0,
                  "spreadDistance": 3,
                },
              ],
            }
          }
        >
          <TextInput
            autoCapitalize="none"
            autoComplete="email"
            cursorColor="white"
            onChangeText={[Function]}
            placeholder="EMAIL"
            placeholderTextColor="#676767"
            selectionColor="#664D9A"
            style={
              {
                "backgroundColor": "#161616",
                "borderRadius": 1,
                "color": "white",
                "fontFamily": "FranklinGothicDemiCond-Regular",
                "fontSize": 16,
                "padding": 8,
              }
            }
            value=""
          />
        </View>
      </View>
      <View
        style={
          {
            "gap": 4,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "boxShadow": [
                {
                  "blurRadius": 3,
                  "color": "#161616",
                  "offsetX": 0,
                  "offsetY": 0,
                  "spreadDistance": 3,
                },
              ],
            }
          }
        >
          <TextInput
            autoCapitalize="none"
            autoComplete="current-password"
            cursorColor="white"
            onChangeText={[Function]}
            placeholder="PASSWORD"
            placeholderTextColor="#676767"
            secureTextEntry={true}
            selectionColor="#664D9A"
            style={
              {
                "backgroundColor": "#161616",
                "borderRadius": 1,
                "color": "white",
                "fontFamily": "FranklinGothicDemiCond-Regular",
                "fontSize": 16,
                "padding": 8,
              }
            }
            value=""
          />
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "width": "100%",
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            role="button"
            style={
              {
                "flex": 1,
                "padding": 4,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#CACEFF",
                  "fontFamily": "FranklinGothicDemiCond-Italic",
                  "fontSize": 14,
                  "textAlign": "right",
                  "textDecorationLine": "underline",
                }
              }
            >
              Forgot your password?
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
    >
      <View
        onLayout={[Function]}
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "paddingBottom": 9,
            "paddingHorizontal": 24,
            "paddingTop": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "AgencyFB-Bold",
              "fontSize": 16,
              "textShadowColor": "#28074B80",
              "textShadowRadius": 1,
            }
          }
        >
          LOGIN
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "flexDirection": "row",
          "gap": 8,
        },
        {
          "bottom": 16,
          "left": 16,
          "position": "absolute",
        },
      ]
    }
    testID="disclaimer"
  >
    <
      name="information-circle-sharp"
      style={
        {
          "color": "#C8C8D5",
          "fontSize": 24,
        }
      }
    />
    <Text
      style={
        {
          "color": "#C8C8D5",
          "flexShrink": 1,
          "fontFamily": "FranklinGothicDemiCond-Italic",
          "fontSize": 14,
        }
      }
    >
      This project is a fan-made creation and is not affiliated with Aether Studios or Offbrand Games in any official capacity. The app works directly between your device and the official game servers, with no third parties involved in transferring or processing your data. 
      <Text
        style={
          {
            "color": "white",
            "textDecorationLine": "underline",
          }
        }
      >
        Learn more...
      </Text>
    </Text>
  </View>
</View>
`;

exports[`SignIn matches snapshot with password reset dialog open 1`] = `
[
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
          "justifyContent": "center",
          "marginBottom": 0,
          "padding": 16,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "gap": 24,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "white",
            "fontFamily": "FranklinGothicDemiCond-Italic",
            "fontSize": 24,
            "textAlign": "center",
            "textTransform": "uppercase",
            "width": "100%",
          }
        }
      >
        Login to your
        

        in-game account
      </Text>
      <View
        style={
          {
            "gap": 12,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "gap": 4,
              "width": "100%",
            }
          }
        >
          <View
            style={
              {
                "boxShadow": [
                  {
                    "blurRadius": 3,
                    "color": "#161616",
                    "offsetX": 0,
                    "offsetY": 0,
                    "spreadDistance": 3,
                  },
                ],
              }
            }
          >
            <TextInput
              autoCapitalize="none"
              autoComplete="email"
              cursorColor="white"
              onChangeText={[Function]}
              placeholder="EMAIL"
              placeholderTextColor="#676767"
              selectionColor="#664D9A"
              style={
                {
                  "backgroundColor": "#161616",
                  "borderRadius": 1,
                  "color": "white",
                  "fontFamily": "FranklinGothicDemiCond-Regular",
                  "fontSize": 16,
                  "padding": 8,
                }
              }
              value=""
            />
          </View>
        </View>
        <View
          style={
            {
              "gap": 4,
              "width": "100%",
            }
          }
        >
          <View
            style={
              {
                "boxShadow": [
                  {
                    "blurRadius": 3,
                    "color": "#161616",
                    "offsetX": 0,
                    "offsetY": 0,
                    "spreadDistance": 3,
                  },
                ],
              }
            }
          >
            <TextInput
              autoCapitalize="none"
              autoComplete="current-password"
              cursorColor="white"
              onChangeText={[Function]}
              placeholder="PASSWORD"
              placeholderTextColor="#676767"
              secureTextEntry={true}
              selectionColor="#664D9A"
              style={
                {
                  "backgroundColor": "#161616",
                  "borderRadius": 1,
                  "color": "white",
                  "fontFamily": "FranklinGothicDemiCond-Regular",
                  "fontSize": 16,
                  "padding": 8,
                }
              }
              value=""
            />
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "width": "100%",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              role="button"
              style={
                {
                  "flex": 1,
                  "padding": 4,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#CACEFF",
                    "fontFamily": "FranklinGothicDemiCond-Italic",
                    "fontSize": 14,
                    "textAlign": "right",
                    "textDecorationLine": "underline",
                  }
                }
              >
                Forgot your password?
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        role="button"
      >
        <View
          onLayout={[Function]}
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "paddingBottom": 9,
              "paddingHorizontal": 24,
              "paddingTop": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "AgencyFB-Bold",
                "fontSize": 16,
                "textShadowColor": "#28074B80",
                "textShadowRadius": 1,
              }
            }
          >
            LOGIN
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "flexDirection": "row",
            "gap": 8,
          },
          {
            "bottom": 16,
            "left": 16,
            "position": "absolute",
          },
        ]
      }
      testID="disclaimer"
    >
      <
        name="information-circle-sharp"
        style={
          {
            "color": "#C8C8D5",
            "fontSize": 24,
          }
        }
      />
      <Text
        style={
          {
            "color": "#C8C8D5",
            "flexShrink": 1,
            "fontFamily": "FranklinGothicDemiCond-Italic",
            "fontSize": 14,
          }
        }
      >
        This project is a fan-made creation and is not affiliated with Aether Studios or Offbrand Games in any official capacity. The app works directly between your device and the official game servers, with no third parties involved in transferring or processing your data. 
        <Text
          style={
            {
              "color": "white",
              "textDecorationLine": "underline",
            }
          }
        >
          Learn more...
        </Text>
      </Text>
    </View>
  </View>,
  <View>
    <Modal
      animationType="fade"
      onRequestClose={[Function]}
      statusBarTranslucent={true}
      transparent={true}
    >
      <View
        onLayout={[Function]}
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#000000AA",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          testID="overlay"
        />
        <View
          style={
            {
              "backgroundColor": "#4C12AA",
              "borderColor": "#A95AF1",
              "borderWidth": 2.5,
              "width": "85%",
            }
          }
          testID="dialog"
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderColor": "#4C12AA",
                "borderWidth": 2,
                "gap": 16,
                "minHeight": "20%",
                "padding": 16,
              }
            }
          >
            <View
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <ViewManagerAdapter_ExpoImage
                bottom={0}
                containerViewRef={"[React.ref]"}
                contentFit="fill"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                left={0}
                nativeViewRef={"[React.ref]"}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                position="absolute"
                right={0}
                sfEffect={null}
                source={
                  [
                    {
                      "testUri": "../../../src/assets/images/ui/dialog-bg.png",
                    },
                  ]
                }
                style={
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                symbolSize={null}
                symbolWeight={null}
                top={0}
                transition={null}
              />
            </View>
            <Text
              style={
                {
                  "color": "white",
                  "fontFamily": "FranklinGothicDemiCond-Regular",
                  "fontSize": 16,
                }
              }
            >
              After submitting, you will receive an email from Aether Studios allowing you to reset your password
            </Text>
            <View
              style={
                {
                  "gap": 4,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  {
                    "boxShadow": [
                      {
                        "blurRadius": 3,
                        "color": "#161616",
                        "offsetX": 0,
                        "offsetY": 0,
                        "spreadDistance": 3,
                      },
                    ],
                  }
                }
              >
                <TextInput
                  autoCapitalize="none"
                  autoComplete="email"
                  cursorColor="white"
                  onChangeText={[Function]}
                  placeholder="EMAIL"
                  placeholderTextColor="#676767"
                  selectionColor="#664D9A"
                  style={
                    {
                      "backgroundColor": "#161616",
                      "borderRadius": 1,
                      "color": "white",
                      "fontFamily": "FranklinGothicDemiCond-Regular",
                      "fontSize": 16,
                      "padding": 8,
                    }
                  }
                  value=""
                />
              </View>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              role="button"
            >
              <View
                onLayout={[Function]}
                style={
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
              <View
                style={
                  {
                    "alignItems": "center",
                    "paddingBottom": 9,
                    "paddingHorizontal": 24,
                    "paddingTop": 8,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "AgencyFB-Bold",
                      "fontSize": 16,
                      "textShadowColor": "#28074B80",
                      "textShadowRadius": 1,
                    }
                  }
                >
                  RESET PASSWORD
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </Modal>
  </View>,
]
`;
